discussion/kv_engine/182393/182393_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB: Add collection configured "canDeduplicate" to Item

Allow in-memory deduplication to be configured from a collection.

This patch hard codes the setting as false, a subsequent change will
allow for a manifest to set deduplication for scopes or collections.

Change-Id: I267954ac413524e24f6709d2cec651bbd1a33cdc

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-11-07 13:40:35.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-11-07 13:40:49.000000000
Message: 
Patch Set 2: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/323505/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-07 13:50:16.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/530/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-neo/kv_engine/engines/ep/src/kv_bucket.cc(1837): error C2664: "void Collections::VB::CachingReadHandle::updateItemFromCollectionConfig(Item &,std::chrono::seconds) const": cannot convert argument 1 from "time_t" to "Item &" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/530/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/382/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/kv_bucket.cc:1837:56:
error: non-const lvalue reference to type "Item" cannot bind to a value of unrelated type "time_t" (aka "long")
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/382/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/392/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kv_bucket.cc:1837:56: error: non-const lvalue reference to type "Item" cannot bind to a value of unrelated type "time_t" (aka "long") [clang-diagnostic-error]
                cHandle.updateItemFromCollectionConfig(exptime, getMaxTtl()),
                                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/collections/vbucket_manifest_handles.h:465:47: note: passing argument to parameter "itm" here
    void updateItemFromCollectionConfig(Item& itm,
                                              ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/392/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kv_bucket.cc:1837:56:
error: non-const lvalue reference to type "Item" cannot bind to a value of unrelated type "time_t" (aka "long") [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/392/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/394/ : FAILURE

Compile error at [2022-11-07T13:45:19.508Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_neo/kv_engine/engines/ep/src/kv_bucket.cc:1837:56:
error: cannot convert ?time_t? {aka ?long int?} to ?Item&?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/394/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/634/ : FAILURE

Compile error at [2022-11-07T13:49:42.060Z] /Users/couchbase/workspace/workspace/kv_engine.macos_neo/kv_engine/engines/ep/src/kv_bucket.cc:1837:56:
error: non-const lvalue reference to type "Item" cannot bind to a value of unrelated type "time_t" (aka "long")
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/634/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/415/ : FAILURE

Compile error at [2022-11-07T13:44:01.372Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_neo/kv_engine/engines/ep/src/kv_bucket.cc:1837:56:
error: non-const lvalue reference to type "Item" cannot bind to a value of unrelated type "time_t" (aka "long")
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/415/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/407/ : FAILURE

Compile error at [2022-11-07T13:44:43.257Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_neo/kv_engine/engines/ep/src/kv_bucket.cc:1837:56:
error: non-const lvalue reference to type "Item" cannot bind to a value of unrelated type "time_t" (aka "long")
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/407/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/407/ : FAILURE

Compile error at [2022-11-07T13:42:53.826Z] /home/couchbase/jenkins/workspace/kv_engine.linux_neo/kv_engine/engines/ep/src/kv_bucket.cc:1837:56:
error: cannot convert ?time_t? {aka ?long int?} to ?Item&?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/407/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/417/ : FAILURE

Compile error at [2022-11-07T13:49:23.907Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_neo/kv_engine/engines/ep/src/kv_bucket.cc:1837:56:
error: cannot convert ?time_t? {aka ?long int?} to ?Item&?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/417/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/394/ : FAILURE

Compile error at [2022-11-07T13:44:39.615Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_neo/kv_engine/engines/ep/src/kv_bucket.cc:1837:56:
error: non-const lvalue reference to type "Item" cannot bind to a value of unrelated type "time_t" (aka "long")
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/394/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20984/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2022-11-15 10:27:41.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
